# cla-omnibox

./: .gitignore  README.md  pyproject.toml
apresentacao/img/: desktop.ini
config/: cla_omnibox_schema_dados.json  parametros_geracao_dados.xlsx
dados/gerado/templates/: category.parquet  customers.parquet  products.parquet  sub_category.parquet
datalake/raw/marketing_api/: mkt_actions.json  mkt_campaigns.json  mkt_spend.json
docs/: README.MD  cla_ominibox_guia_conferencia_valores.txt  cla_omnibox_medidas - Copia.csv  cla_omnibox_medidas.csv  cla_omnibox_medidas.xlsx  cla_omnibox_medidas_doc1.xlsx  esquema_atualizado.txt  esquema_ouro_atualizado.txt  medidas_dashboard.txt
docs/diagramas/: cla_omnibox.drawio
docs/readme/: insights.md  processo_CRISP-DM-Etapa1.md  processo_CRISP-DM-Etapa2.md  processo_CRISP-DM-Etapa3.md  processo_CRISP-DM-Etapa4.md  processo_CRISP-DM-Etapa5.md  processo_crisp-dm.md  solicitacao_plano.md
src/: cla_omnibox_exploracao.ipynb  cla_omnibox_transformacao.py  cla_omnibox_tratamento.py  cla_omnibox_tratamento_funcoes.py  teste.sql
src/geracao_dados/: converte_parquet_raw.py  gerador_dados_omnibox.py
src/ingestao/: cla_omnibox_ingestao_analytics.py  cla_omnibox_ingestao_marketing.py  cla_omnibox_ingestao_marketing_api.py  cla_omnibox_ingestao_vendas.py
