[project]
name = "cla-omnibox"
version = "0.1.0"
description = "Análise de dados CLA sobre a base Omnibox"
authors = [
    {name = "Sergio Ribeiro",email = "sergiorcerqueira@gmail.com"}
]

Readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "windows-curses (>=2.4.1,<3.0.0)",
    "duckdb (>=1.4.2,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
