[project] 
name = "cla-omnibox"
version = "0.1.0"
description = "Analise de dados CLA sobre a base Omnibox"
authors = [
    {name = "Sergio Ribeiro",email = "sergiorcerqueira@gmail.com"}
]

Readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "windows-curses (>=2.4.1,<3.0.0)",
    "duckdb (>=1.4.2,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ipywidgets (>=8.1.8,<9.0.0)",
    "jupyterlab-widgets (>=3.0.16,<4.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "uvicorn (>=0.45.0,<0.46.0)",
    "fastapi (>=0.136.0,<0.137.0)",
    "ipython (>=9.12.0,<10.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
